--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 <img src="./img/shuihai.jpg" alt="alt text" width="119px" height="165px" /></td>
 <td align="left">
 <p>
-Chief Scientist at <a href="https://www.clustarai.com"> Clustar</a><br/>
+Principal Research Engineer at Huawei<br/>
 <br/>
-Office: Room 2407, Tower A2 of Building 9, Phase II of Shenzhen Bay Eco-Technology Park,  Shenzhen, China<br/>
-Work Email: shuihai [at] clustar.ai<br/>
+Office: Huawei Shenzhen Base, Longgang District, Shenzhen, China<br/>
 Personal Email: hushccgg [at] gmail.com<br/>
 </p>
 </td>
@@ -47,7 +46,7 @@ Personal Email: hushccgg [at] gmail.com<br/>
 
 <h2>About Me</h2>
 
-<p>I am currently the Chief Scientist at <a href="https://www.clustarai.com"> Clustar</a>. I received my Ph.D. from Department of Computer Science and Engineering, Hong Kong University of Science and Technology in 2019. Before that, I received my B.S. degree in Computer Science and Technology from University of Science and Technology of China in 2013.
+<p>I am currently a principal research engineer at Huawei. I received my Ph.D. from Department of Computer Science and Engineering, Hong Kong University of Science and Technology in 2019. Before that, I received my B.S. degree in Computer Science and Technology from University of Science and Technology of China in 2013.
 <br/>
 </p>
 
