--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Personal Email: hushccgg [at] gmail.com<br/>
 
 <h2>Research Interests</h2>
 <p>
-My current interests are mainly about datacenter networks, RDMA networks and machine learning systems (with a special focus on federated machine learning).
+My current interests are mainly about real-time media communication, datacenter networks, RDMA networks and machine learning systems.
 <br/>
 </p>
 
