--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,8 @@
       <meta name="description" content="Homepage of Shuihai HU"/>
       <meta name="keywords" content="Shuihai HU, Datacenter Networking, RDMA, RTC"/>
       <meta name="author" content="Shuihai HU"/> 
-      <link rel="icon" href="http://sing.cse.ust.hk/themes/default/favicon.ico" type="image/x-icon"/>
+<!--      <link rel="icon" href="http://sing.cse.ust.hk/themes/default/favicon.ico" type="image/x-icon"/>
+-->
       <title>Shuihai HU</title>
     </head>
 
@@ -23,47 +24,20 @@
             <div class="menu-item"><a href="papers.html">Publications</a></div>
             <div class="menu-item"><a href="talks.html">Talks</a></div>
             <div class="menu-item"><a href="blogs.html">Blogs</a></div>
+
           </td>
 
 <td id="layout-content">
 <div id="toptitle">
-<h1>Talks</h1>
+<h1>Blogs</h1>
 </div>
 
 <ul>
 
 <li> <p>
-<b> Aeolus: A Building Block for Proactive Transport in Datacenters. </b><br/>
-SIGCOMM 2020<br/>
-August 2020, Virtual Conference<br/>
+  Response to “A Critique of Aeolus”: <b>Severe Loss is not Rare in High-speed Datacenter Networks</b> <a href="severe_loss_is_not_rare.pdf"> [pdf]</a><br/>
 </p></li>
 
-<li> <p>
-<b> Tagger: Practical PFC Deadlock Prevention in Data Center Networks. </b><br/>
-CoNEXT 2017<br/>
-December 2017, Seoul/Incheon, South Korea<br/>
-</p></li>
-
-<li> <p>
-<b> Congestion Control for High-speed Extremely Shallow-buffered Datacenter Networks. </b><br/>
-APNet 2017<br/>
-August 2017, Hong Kong, China<br/>
-</p></li>
-
-
-
-<li> <p>
-<b> Deadlocks in Datacenter Networks: Why Do They Form, and How To Avoid Them. </b><br/>
-HotNets 2016<br/>
-November 2016, Atlanta, Georgia, USA<br/>
-</p></li>
-
-
-<li> <p>
-<b> Providing Bandwidth Guarantees, Work Conservation and Low Latency Simultaneously in the Cloud </b><br/>
-INFOCOM 2016<br/>
-April 2016, San Francisco, CA<br/>
-</p></li>
 </ul>
 
 
@@ -85,7 +59,7 @@ April 2016, San Francisco, CA<br/>
 
 <div id="footer" >
 <div id="footer-text">
-Copyright &copy;2020 <a href="http://shuihaihu.github.io/">Shuihai HU &nbsp;&nbsp;&nbsp;&nbsp;</a> 
+Copyright &copy;2022 <a href="http://shuihaihu.github.io/">Shuihai HU &nbsp;&nbsp;&nbsp;&nbsp;</a> 
 <script language="javascript"> 
 document.write("Last updated "+new Date(document.lastModified).toUTCString()); 
 </script>  
