--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="css/jemdoc.css" type="text/css" />
 <meta name="description" content="Homepage of Shuihai HU"/>
-<meta name="keywords" content="Shuihai HU, HKUST, Datacenter Networking, RDMA"/>
+<meta name="keywords" content="Shuihai HU, Huawei, Datacenter Networking, RDMA, RTC"/>
 <meta name="author" content="Shuihai HU"/> 
-<link rel="icon" href="http://sing.cse.ust.hk/themes/default/favicon.ico" type="image/x-icon"/>
+
+<!--<link rel="icon" href="http://sing.cse.ust.hk/themes/default/favicon.ico" type="image/x-icon"/>
+-->
+
 <title>Shuihai HU</title>
 </head>
 
@@ -22,6 +25,7 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="papers.html">Publications</a></div>
 <div class="menu-item"><a href="talks.html">Talks</a></div>
+<div class="menu-item"><a href="blogs.html">Blogs</a></div>
 </td>
 
 <td id="layout-content">
@@ -66,7 +70,7 @@ May 2020   Aeolus accepted to SIGCOMM 2020.</p></li>
 
 <div id="footer" >
 <div id="footer-text">
-Copyright &copy;2020 <a href="http://shuihaihu.github.io/">Shuihai HU &nbsp;&nbsp;&nbsp;&nbsp;</a> 
+Copyright &copy;2022 <a href="http://shuihaihu.github.io/">Shuihai HU &nbsp;&nbsp;&nbsp;&nbsp;</a> 
 <script language="javascript"> 
 document.write("Last updated "+new Date(document.lastModified).toUTCString()); 
 </script>  
