--- a/papers.html
+++ b/papers.html
@@ -5,9 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <link rel="stylesheet" href="css/jemdoc.css" type="text/css" />
         <meta name="description" content="Homepage of Shuihai HU"/>
-        <meta name="keywords" content="Shuihai HU, HKUST, Datacenter, Network Virtualization, Resource Allocation, Explicit Routing"/>
+        <meta name="keywords" content="Shuihai HU, Datacenter Networking, RDMA, RTC"/>
         <meta name="author" content="Shuihai HU"/> 
-        <link rel="icon" href="http://sing.cse.ust.hk/themes/default/favicon.ico" type="image/x-icon"/>
+<!--        <link rel="icon" href="http://sing.cse.ust.hk/themes/default/favicon.ico" type="image/x-icon"/>
+-->
         <title>Shuihai HU</title>
     </head>
 
@@ -18,10 +19,12 @@
                 <td id="layout-menu">
                     <div class="menu-category">Shuihai HU</div>
                     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-                    <div class="menu-item"><a href="Resume.pdf" >Resume</a></div>
+                    <div class="menu-item"><a href="shuihai_CV.pdf" >CV</a></div>
                     <div class="menu-category">Research</div>
                     <div class="menu-item"><a href="papers.html">Publications</a></div>
                     <div class="menu-item"><a href="talks.html">Talks</a></div>
+                    <div class="menu-item"><a href="blogs.html">Blogs</a></div>
+
                 </td>
 
                 <td id="layout-content">
@@ -72,6 +75,11 @@
 
 <h2>Journal Papers</h2>
                     <ol>
+                            <li><p>
+                            <b>Aeolus: A Building Block for Proactive Transport in Datacenters</b><br/>
+                            <b>Shuihai Hu</b>, Wei Bai, Gaoxiong Zeng, Zilong Wang, Baochen Qiao, Kai Chen, Kun Tan, Yi Wang<br/>
+                            IEEE/ACM Transactions on Networking, 2021<br/>
+                            </p></li>
 
                         <li><p>
                             <b>One More Config is Enough: Saving (DC)TCP for High-speed Extremely Shallow-buffered Datacenters</b><br/>
@@ -151,7 +159,7 @@
 
                     <div id="footer" >
                         <div id="footer-text">
-                            Copyright &copy;2020 <a href="http://shuihaihu.github.io/">Shuihai HU &nbsp;&nbsp;&nbsp;&nbsp;</a> 
+                            Copyright &copy;2022 <a href="http://shuihaihu.github.io/">Shuihai HU &nbsp;&nbsp;&nbsp;&nbsp;</a> 
                             <script language="javascript"> 
 document.write("Last updated "+new Date(document.lastModified).toUTCString()); 
                             </script>  
