update new papers

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@ My current interests are mainly about real-time media communication, datacenter 
 
 <h2>News</h2>
 <ul>
-  
 <li><p>
-May 2020   Aeolus accepted to SIGCOMM 2020.</p></li>
+ComboTE accepted to ICNP 2022.</p></li>
+<li><p>
+LiteFlow accepted to SIGCOMM 2022.</p></li>
+<li><p>
+Aeolus accepted to SIGCOMM 2020.</p></li>
 </ul>
 
 <div id="footer" >
