--- a/papers.html
+++ b/papers.html
@@ -34,6 +34,18 @@
 
                     <h2>Conference Papers</h2>
                     <ol>
+                            <li><p>
+                            <b>comboTE: Scalable Mixed-link based Traffic Engineering for Hybrid WANs</b> <br/>
+                            Xincai Fei, Yonggang Chen, Hao Wu, <b>Shuihai Hu</b>, Kai Zheng, Kun Tan <br/>
+                            ICNP 2022 <br/>
+                            </p></li>
+
+                        <li><p>
+                            <b>LiteFlow: Towards High-performance Adaptive Neural Networks for Kernel Datapath</b> <br/>
+                            Junxue Zhang, Chaoliang Zeng, Hong Zhang, <b>Shuihai Hu</b>, Kai Chen <br/>
+                            ACM SIGCOMM 2022 <br/>
+                            </p></li>
+
                         <li><p>
                             <b>Aeolus: A Building Block for Proactive Transport in Datacenters</b> <br/>
                             <b>Shuihai Hu</b>, Wei Bai, Gaoxiong Zeng, Zilong Wang, Baochen Qiao, Kai Chen, Kun Tan, Yi Wang <br/>
